Add tls options

--- a/custom_components/livebox/translations/en.json
+++ b/custom_components/livebox/translations/en.json
@@ -7,7 +7,8 @@
                     "host": "IP Address",
                     "username": "Username",
                     "password": "Password",
-                    "port": "Port"
+                    "port": "Port",
+                    "use_tls":"Use SSL"
                 }
             }
         },
