--- a/custom_components/livebox/translations/fr.json
+++ b/custom_components/livebox/translations/fr.json
@@ -7,7 +7,8 @@
           "host": "Adresse IP",
           "username": "Utilisateur",
           "password": "Mot de passe",
-          "port": "Port"
+          "port": "Port",
+          "use_tls":"Utiliser SSL/TLS"
         }
       }
     },
