--- a/custom_components/livebox/translations/en.json
+++ b/custom_components/livebox/translations/en.json
@@ -13,7 +13,7 @@
             }
         },
         "error": {
-            "login_inccorect": "User or password inccorect",
+            "login_incorrect": "User or password incorrect",
             "insufficient_permission": "Insufficient permission.",
             "unknown": "Unknown error occurred",
             "cannot_connect": "Unable to connect to the livebox"
