--- a/custom_components/livebox/translations/fr.json
+++ b/custom_components/livebox/translations/fr.json
@@ -13,7 +13,7 @@
       }
     },
     "error": {
-      "login_inccorect": "Utilisateur ou mot de passe incorrect.",
+      "login_incorrect": "Utilisateur ou mot de passe incorrect.",
       "insufficient_permission": "Permission insuffisante.",      
       "unknown": "Erreur inconnue.",
       "cannot_connect": "Impossible de se connecter à la Livebox."
