--- a/custom_components/livebox/translations/nb.json
+++ b/custom_components/livebox/translations/nb.json
@@ -13,7 +13,7 @@
             }
         },
         "error": {
-            "login_inccorect": "Feil bruker eller passord",
+            "login_incorrect": "Feil bruker eller passord",
             "insufficient_permission": "Utilstrekkelig tillatelse.",
             "unknown": "Det oppstod en ukjent feil",
             "cannot_connect": "Kan ikke koble til liveboxen"
