Add device tracker mode

--- a/custom_components/livebox/translations/en.json
+++ b/custom_components/livebox/translations/en.json
@@ -28,7 +28,8 @@
         "data": {
           "lan_tracking": "Wired tracking",
           "wifi_tracking": "Wireless tracking",
-          "timeout_tracking": "Timeout tracking"
+          "timeout_tracking": "Timeout tracking",
+          "device_tracker_mode": "Track devices"
         }
       }
     }
